# UTM

./: .gitignore  README.md  Screencast From 2026-06-19 16-40-12.avi  Screencast From 2026-06-19 16-40-12.webm
autonomous_researcher_required_files/: README.md
autonomous_researcher_required_files/app/: bootstrap.py  main.py
autonomous_researcher_required_files/configs/: devices.yaml
autonomous_researcher_required_files/device_bridges/: utm_runtime_bridge.py  utm_state_observer.py
autonomous_researcher_required_files/docs/hardware/: utm_vision_runtime_gui.md
autonomous_researcher_required_files/mcp_tools/: camera_tools.py
autonomous_researcher_required_files/tests/integration/: test_utm_runtime_gui_api.py
autonomous_researcher_required_files/tests/unit/: test_camera_tools_utm_runtime.py  test_utm_runtime_bridge.py  test_utm_runtime_stack_script.py  test_utm_state_observer.py
docs/: autonomous_researcher_integration.md  bashrc.md  camera.md  green_dot_monitoring.md  red_dot_monitoring.md  yolo.md
patches/: yolo_ros_person_filter.patch
scripts/: bashrc_aliases.sh  camera.sh  green_dot_monitoring.sh  red_dot_monitoring.sh  start_utm_vision_stack.sh  yolo.sh
src/compression_tester_monitor/: README.md  package.xml  setup.cfg  setup.py
src/compression_tester_monitor/compression_tester_monitor/: green_dot_monitor.py  red_dot_monitor.py
src/compression_tester_monitor/launch/: camera_rect.launch.py  green_dot_monitor.launch.py  green_dot_monitor_with_roi.launch.py  red_dot_monitor.launch.py
src/roi_image_cropper/: package.xml  setup.cfg  setup.py
(+5 files in other folders)
